# cerebro-reranker

./: .envrc  Justfile  Make  arch.md  flake.nix
modules/: cache-layer.nix  ipfs-cluster.nix  monitoring.nix  reranker-service.nix  training-pipeline.nix
modules/reranker/: ab-testing.nix  default.nix  migration.nix
scripts/: benchmark.py  comapare_performance.py
src/: cache.rs  ipfs.rs  lib.rs  scorer.rs
src/benches/: scoring.rs
src/cerebro/: reranker_client.py
src/lib/: Cargo.toml
src/lib/benches/: scoring.rs
src/lib/src/: cache.rs  ipfs.rs  lib.rs  scorer.rs  utils.rs
src/middleware/: reranker-client.ts  semantic-cache.ts
src/middleware/__tests__/: reranker-client.test.ts
src/phantom/: cli.py
src/phantom/core/rag/: engine.py
src/phantom/providers/reranker/: client.py
src/reranker/: cache.py  hybrid_engine.py  models.py  server.py
src/training/: export.py  train.py
src/types/: semantic-cache.ts
tests/: conftest.py  pytest.ini  test_cache.py  test_hybrid_engine.py  test_models.py  test_reranker_client.py  test_reranker_integration.py  test_server.py
