[package]
name = "cerebro-scorer"
version = "0.1.0"
edition = "2021"

[lib]
name = "scorer"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python FFI
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py311"] }
numpy = "0.20"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "fs", "time", "sync"] }

# Parallel processing
rayon = "1.8"

# Numerics
ndarray = { version = "0.15", features = ["rayon"] }

# HTTP client (IPFS Kubo API)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Hashing
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory management
mimalloc = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rand = "0.8"
tokio-test = "0.4"

[[bench]]
name = "scoring"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true

[profile.bench]
inherits = "release"
